// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`connect()\` connects the \`Store\` to a normal component 1`] = `
<div>
  connected
</div>
`;

exports[`\`connect()\` connects the \`Store\` to a normal component 2`] = `
<div>
  unconnected
</div>
`;

exports[`\`connect()\` connects the \`Store\` to a stateless component 1`] = `
<div>
  connected
</div>
`;

exports[`\`connect()\` connects the \`Store\` to a stateless component 2`] = `
<div>
  unconnected
</div>
`;
